objects/LLC__c.object
<CustomObject>
    <description>Object capturing the LLC Name, LLC Owner and related opportunities.</description>
    <fields>
        <fullName>Account_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LLCs</relationshipLabel>
        <relationshipName>LLCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creation_Date_Deadline__c</fullName>
        <label>Creation Date (Deadline):</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Code_to_bill_setup_costs__c</fullName>
        <label>Department Code to bill setup costs:</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_File_Number__c</fullName>
        <label>Entity File Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_this_SPV_in_the_approved_budget__c</fullName>
        <label>Is this SPV in the approved budget?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_of_Formation__c</fullName>
        <label>Jurisdiction of Formation:</label>
        <picklist>
            <picklistValues>
                <fullName>Delaware</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Company_Equity_Holder__c</fullName>
        <label>Parent Company/Equity Holder:</label>
        <picklist>
            <picklistValues>
                <fullName>SPEB</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SPDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPKR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualify_in_Additional_Jurisdictions__c</fullName>
        <label>Qualify in Additional Jurisdictions</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPV_Name__c</fullName>
        <label>SPV Name:</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPV_fully_permitted_Approval_req_if_No__c</fullName>
        <label>SPV fully permitted? Approval req if No.</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_Capital__c</fullName>
        <label>Share Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taxpayer_Identification_Number_Required__c</fullName>
        <label>Taxpayer Identification Number Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timing_Requirements_if_applicable__c</fullName>
        <label>Timing Requirements, if applicable.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_SPV__c</fullName>
        <label>Type of SPV</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>LLC</label>
    <nameField>
        <label>LLC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LLCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>